[gd_scene load_steps=5 format=3 uid="uid://e6nqkpidyjkt"]

[ext_resource type="Texture2D" uid="uid://cjt1fes7q27t4" path="res://NewSprites/GUI.png" id="1_q7cop"]
[ext_resource type="Script" path="res://Scripts/MercenarioTemplate.gd" id="3"]
[ext_resource type="FontFile" uid="uid://bv8fe2b6ni5fa" path="res://Fonts/m3x6.ttf" id="3_0qcmo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sbujq"]
atlas = ExtResource("1_q7cop")
region = Rect2(464, 224, 112, 32)

[node name="mercenarioTemplate" type="TextureButton"]
texture_filter = 1
offset_right = 112.0
offset_bottom = 32.0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_sbujq")
script = ExtResource("3")

[node name="Nombre_text" type="Label" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 11.0
offset_right = 97.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0qcmo")
text = "AAAAAAAAAAAAAA"

[node name="rango_text" type="Label" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = -3.0
offset_right = 60.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0qcmo")
text = "R: 99"

[node name="mercenario_icon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 26.0
offset_bottom = 25.0
expand_mode = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
